Fix missing margin on status page stats
The status page stats didn't had any margin around them.
That way the huge average number touched the label if your
screen size had the appropriate resolution.
Added some margin to the left, so it won't touch the label
anymore.

--- a/src/plugins/statusPage/public/statusPage.less
+++ b/src/plugins/statusPage/public/statusPage.less
@@ -53,6 +53,7 @@
         line-height:45px;
         font-weight: normal;
         margin:0;
+        margin-left: 10px;
       }
     }
   }
